--- a/package.json
+++ b/package.json
@@ -17,5 +17,14 @@
   "dependencies": {
     "colors": "^1.0.3",
     "minimist": "^1.1.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/chtefi/chtree.git"
+  },
+  "bugs": {
+    "url": "https://github.com/chtefi/chtree/issues"
+  },
+  "homepage": "https://github.com/chtefi/chtree"
 }
